--- a/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
+++ b/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
@@ -1,9 +1,9 @@
-mejs-overlay-title {
+.mejs-overlay-title {
 	width: 100%; 
 	z-index: 999;
 }
 
-mejs-overlay-title a {
+.mejs-overlay-title a {
 	color: white; 
 	display: block; 
 	font-weight: bold; 
