--- a/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
+++ b/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
@@ -1,14 +1,15 @@
-.mejs-overlay-title {
-	width: 100%; 
-	z-index: 999;
-}
-
-.mejs-overlay-title a {
-	color: white; 
-	display: block; 
-	font-weight: bold; 
-	font-size: 15pt; 
-	margin: 10px 15px; 
-	text-shadow: 0px 0px 2px rgb(0, 0, 0);
-}
-
+.mejs-title { 
+        width: 100%;  
+        z-index: 999; 
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        background: rgba(35, 35, 38, 0.8); 
+} 
+ 
+.mejs-title a { 
+        color: white;  
+        display: block;  
+        font-size: 12pt;  
+        margin: 10px 15px;  
+} 
