Update namespace to support mediaelement 3.x

--- a/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
+++ b/app/assets/stylesheets/mediaelement-title/mejs-title.css.erb
@@ -1,4 +1,4 @@
-.mejs-title { 
+.mejs__title { 
         width: 100%;  
         z-index: 999; 
         position: absolute; 
@@ -7,7 +7,7 @@
         background: rgba(35, 35, 38, 0.8); 
 } 
  
-.mejs-title a { 
+.mejs__title a { 
         color: white;  
         display: block;  
         font-size: 12pt;  
